Some theming and javascript handling optimization

--- a/src/main/html/discover.html
+++ b/src/main/html/discover.html
@@ -58,4 +58,4 @@
     </div>
 </div>
 <!-- Button to trigger menu enabling (likely for JavaScript) -->
-<button onclick="enableMenu(true);" class="onload d-none">On page load</button>
+<button onclick="loadScript('assets/nexus/js/discover.js', null); enableMenu(true);" class="onload d-none">On page load</button>
