Changed default accent color to blue

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="assets/nexus/img/app.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/nexus/img/app.png">
         <!-- Bootstrap CSS -->
         <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap Icons -->
