--- a/src/main/html/library.html
+++ b/src/main/html/library.html
@@ -1,5 +1,59 @@
 <link href="assets/nexus/css/library.css" rel="stylesheet">
-<div class="library">
-
+<div id="library" class="nex-flex">
+    <div class="card bg-dark-subtle submenu" style="margin: 0.5rem; padding: 0;">
+        <div class="card-header">
+            <strong>Library</strong>
+        </div>
+        <label>
+            <select>
+                <option>Search modules...</option>
+            </select>
+        </label>
+        <div class="d-flex">
+            <button id="create-button" type="button" class="btn btn-nex-secondary flex-grow-1" data-bs-toggle="modal" data-bs-target="#addInstance">
+                <i class="bi bi-plus-lg"></i>
+                <span>Add instance</span>
+            </button>
+            <button id="reload-button" onclick="loadPage('library.html');" type="button" class="btn btn-nex-secondary">
+                <i class="bi bi-arrow-clockwise m-0 p-0"></i>
+            </button>
+        </div>
+        <div class="card-header" style="border-top: 1px solid var(--bs-dark-border-subtle);">
+            <strong>Instances</strong>
+        </div>
+        <div id="instance-list" class="d-flex flex-column m-0 p-0">
+            <button type="button" class="btn btn-nex-secondary d-none instance-list-template" style="margin: 0 0.5rem; width: calc(100% - 1rem);">
+                <i class="bi bi-dice-4"></i>
+                <span>Instance</span>
+            </button>
+            <div class="instance-group-template submenu-group d-none">
+                <a><i class="bi bi-caret-down"></i></a>
+                <h6>Custom instance group</h6>
+                <div class="collapse m-0 p-0 w-100 position-relative">
+                    <div class="d-flex flex-column">
+                        <button type="button" class="btn btn-nex-secondary d-none w-100 instance-list-template">
+                            <i class="bi bi-dice-6"></i>
+                            <span>Instance</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<button onclick="loadScript('assets/nexus/js/library.js', onload)" class="onload d-none">On page load</button>
+<div class="modal fade" id="addInstance" tabindex="-1" aria-labelledby="addInstanceLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content rounded-2">
+            <div class="modal-header" id="addInstanceM-header">
+
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+<button onclick="loadScript('assets/nexus/js/library.js', onload);" class="onload d-none">On page load</button>
