Library menu prototype and frame optimization for linux and macos

--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -48,8 +48,8 @@
                     </li>
                 </ul>
             </div>
-            <!-- Menu panel (right side) -->
-            <div class="menu-panel shadow card transition">
+            <!-- Menu panel -->
+            <div class="menu-panel shadow card">
                 <!-- Menu panel header -->
                 <div class="card-header">
                     <!-- Panel mode toggle -->
