--- a/src/main/html/library.html
+++ b/src/main/html/library.html
@@ -1,6 +1,6 @@
 <link href="assets/nexus/css/library.css" rel="stylesheet">
-<div id="library" class="nex-flex">
-    <div class="card bg-dark-subtle submenu" style="margin: 0.5rem; padding: 0;">
+<div id="library" class="nex-flex w-100 h-100">
+    <div class="card bg-dark-subtle submenu glass">
         <div class="card-header">
             <strong>Library</strong>
         </div>
@@ -39,6 +39,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="position-relative w-100 h-100">
+
     </div>
 </div>
 <div class="modal fade" id="addInstance" tabindex="-1" aria-labelledby="addInstanceLabel" aria-hidden="true">
