--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -1,8 +1,8 @@
 <link href="assets/nexus/css/settings.css" rel="stylesheet">
 
-<div class="nex-flex">
+<div class="nex-flex w-100 h-100">
     <!-- Sidebar/Submenu for Settings Categories -->
-    <div class="card bg-dark-subtle submenu" style="margin: 0.5rem;">
+    <div class="card bg-dark-subtle submenu">
         <div class="submenu-group">
             <h6>General settings</h6>
             <!-- Button for General Settings -->
