--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -22,6 +22,8 @@
 
     <!-- Body of the application -->
     <body data-bs-theme="dark" class="d-flex flex-column h-100 w-100 position-absolute">
+        <!-- Screen saver-->
+        <div id="screensaver"></div>
         <!-- Title bar (likely for custom window controls) -->
         <div id="titlebar" style="height: 2rem;"></div>
         <!-- Main content area -->
