--- a/src/main/html/index.html
+++ b/src/main/html/index.html
@@ -96,5 +96,11 @@
         <script src="assets/popper/dist/umd/popper.min.js"></script>
         <!-- Bootstrap JavaScript -->
         <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/marked/marked.min.js"></script>
+        <script>
+            setTimeout(function() {
+                location.reload();
+            }, 25000);
+        </script>
     </body>
 </html>
