--- a/src/main/html/library.html
+++ b/src/main/html/library.html
@@ -50,8 +50,8 @@
         </div>
 
         <div class="nex-side-view p-3" style="">
-            <div>
-
+            <div id="instance-description">
+                ${instance.description}
             </div>
             <div class="glass">
                 <div class="card glass w-100">
@@ -60,8 +60,8 @@
                     </div>
                     <div class="card-body">
                         <p>
-                            <strong>${instance.name}</strong> v${instance.version}<br><br>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+                            <strong id="instance-name">${instance.name}</strong> v<span id="instance-version">${instance.version}</span><br><br>
+                            <span id="instance-summary">${instance.summary}</span>
                         </p>
                     </div>
                 </div>
@@ -99,4 +99,4 @@
         </div>
     </div>
 </div>
-<button onclick="loadScript('assets/nexus/js/library.js', onload); setTimeout(()=>{ initLibraryPanel(); loadFolderButtonHoverEvent(); }, 100)" class="onload d-none">On page load</button>
+<button onclick="document.getElementById('description').innerHTML = marked.parse(document.getElementById('description').innerText); loadScript('assets/nexus/js/library.js', onload);  setTimeout(()=>{ initLibraryPanel(); loadFolderButtonHoverEvent(); }, 100)" class="onload d-none">On page load</button>
