Update settings theme to match the library theme

--- a/src/main/html/settings.html
+++ b/src/main/html/settings.html
@@ -21,9 +21,8 @@
     </div>
 
     <!-- Main Content Area for Settings -->
-    <div class="d-flex w-100 flex-column gap-3 overflow-scroll">
-        <!-- Settings Title Card -->
-        <div class="title-menu card glass d-flex flex-row m-2">
+    <div class="position-relative w-100 m-2 card glass shadow overflow-hidden p-0">
+        <div class="title-menu card-header shadow p-1 w-100 d-flex flex-row border-bottom-0">
             <h4 class="m-0 w-100" style="padding: 0.5rem 0.5rem 0.75rem 0.75rem">Settings</h4>
             <div class="buttons w-100 d-flex flex-row align-self-center justify-content-end">
             </div>
@@ -37,8 +36,8 @@
         <!-- Appearance Settings Section -->
         <div id="appearance-settings" class="settings-card flex-column gap-3 active">
             <!-- General Appearance Settings Card -->
-            <div class="card bg-dark-subtle" style="margin: 0 0.5rem 0 0.5rem; box-shadow: 0 0 0.4rem #00000075;">
-                <div class="card-header">
+            <div class="card glass" style="margin: 0 0.5rem 0 0.5rem; box-shadow: 0 0 0.4rem #00000075;">
+                <div class="card-header" style="background: var(--nex-brighter-100);">
                     <strong>General appearance settings</strong>
                 </div>
                 <div class="card-body p-0">
@@ -134,8 +133,8 @@
             </div>
 
             <!-- Dynamic Panel Appearance Settings Card -->
-            <div class="card bg-dark-subtle" style="margin: 0 0.5rem 0 0.5rem; box-shadow: 0 0 0.4rem #00000075;">
-                <div class="card-header">
+            <div class="card glass" style="margin: 0 0.5rem 0 0.5rem; box-shadow: 0 0 0.4rem #00000075;">
+                <div class="card-header" style="background: var(--nex-brighter-100);">
                     <strong>Dynamic panel appearance settings</strong>
                 </div>
                 <div class="card-body p-0">
