--- a/src/main/html/discover.html
+++ b/src/main/html/discover.html
@@ -43,7 +43,7 @@
                 </ul>
                 <!-- Search form -->
                 <form class="d-flex" role="search">
-                    <input class="form-control rounded-3" type="search" placeholder="Search" aria-label="Search">
+                    <input style="background: var(--nex-brighter-100); border: none;" class="form-control rounded-3" type="search" placeholder="Search" aria-label="Search">
                 </form>
             </div>
         </div>
