--- a/src/main/html/library.html
+++ b/src/main/html/library.html
@@ -44,6 +44,7 @@
         <div class="title-menu card-header shadow p-1 w-100 d-flex flex-row border-bottom-0">
             <h4 class="m-0 w-100" style="padding: 0.5rem 0.5rem 0.75rem 0.75rem; ;">Library</h4>
             <div class="buttons w-100 d-flex flex-row align-self-center justify-content-end">
+                <a class="update shadow"><i class="bi bi-download"></i></a>
                 <a class="folder shadow"><i class="bi bi-folder2"></i></a>
                 <a class="settings shadow"><i class="bi bi-gear"></i></a>
             </div>
